<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_info_width"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/text_large"
       android:textStyle="bold"
       android:textColor="@color/app_main_color"
       android:text="@string/info"
       android:layout_margin="@dimen/margin_normal"/>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    	android:padding="@dimen/margin_normal">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/text_large"
		        android:textStyle="bold"
		        android:textColor="@color/app_secondary_color"
		        android:text="@string/add"
		        android:padding="@dimen/margin_small"
		        android:background="@color/app_main_color"/>
		
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/margin_xxxlarge"
		        android:textSize="@dimen/text_small"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_add"/>
		    
			<ImageView 
		        android:layout_width="@dimen/icon_medium"
		        android:layout_height="@dimen/icon_medium"
		        android:scaleType="centerInside"
		        android:src="@drawable/refresh"
		        android:layout_marginTop="@dimen/margin_normal"
		        android:background="@color/app_main_color"/>
		
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/margin_xxxlarge"
		        android:textSize="@dimen/text_small"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_update_all"/>
			
			<ImageView 
		        android:layout_width="@dimen/icon_medium"
		        android:layout_height="@dimen/icon_medium"
		        android:scaleType="centerInside"
		        android:src="@drawable/delete"
		        android:background="@color/app_main_color"
		        android:layout_marginTop="@dimen/margin_normal"/>
		
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/margin_xxxlarge"
		        android:textSize="@dimen/text_small"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_delete_all"/>
			
			<ImageView 
		        android:layout_width="@dimen/icon_medium"
		        android:layout_height="@dimen/icon_medium"
		        android:scaleType="centerInside"
		        android:src="@drawable/ic_enabled"
		        android:layout_marginTop="@dimen/margin_normal"/>
		
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/margin_xxxlarge"
		        android:textSize="@dimen/text_small"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_enabled"/>
			
			<ImageView 
		        android:layout_width="@dimen/icon_medium"
		        android:layout_height="@dimen/icon_medium"
		        android:scaleType="centerInside"
		        android:src="@drawable/ic_disabled"
		        android:layout_marginTop="@dimen/margin_normal"/>
		
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/margin_xxxlarge"
		        android:textSize="@dimen/text_small"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_disabled"/>
			
			<ImageView 
		        android:layout_width="@dimen/icon_medium"
		        android:layout_height="@dimen/icon_medium"
		        android:scaleType="centerInside"
		        android:src="@drawable/ic_high"
		        android:layout_marginTop="@dimen/margin_normal"/>
		
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/margin_xxxlarge"
		        android:textSize="@dimen/text_small"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_high"/>
			
			<ImageView 
		        android:layout_width="@dimen/icon_medium"
		        android:layout_height="@dimen/icon_medium"
		        android:scaleType="centerInside"
		        android:src="@drawable/ic_medium"
		        android:layout_marginTop="@dimen/margin_normal"/>
		
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/margin_xxxlarge"
		        android:textSize="@dimen/text_small"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_medium"/>
			
			<ImageView 
		        android:layout_width="@dimen/icon_medium"
		        android:layout_height="@dimen/icon_medium"
		        android:scaleType="centerInside"
		        android:src="@drawable/ic_low"
		        android:layout_marginTop="@dimen/margin_normal"/>
		
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/margin_xxxlarge"
		        android:textSize="@dimen/text_small"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_low"/>
            
			<TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/text_small"
		        android:layout_marginTop="@dimen/margin_normal"
		        android:textColor="@color/text_list_primary"
		        android:text="@string/info_priority"/>
            
			
        </LinearLayout>
        
    </ScrollView>
  
    <Button 
	      android:id="@+id/ok"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:textColor="@color/app_secondary_color"
	      android:textStyle="bold"
	      android:background="@drawable/selector_button"
	      android:text="@string/ok"/>
    
    
</LinearLayout>
