<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout 
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/app_main_color">
    
        <LinearLayout 
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/selector_button"
        	android:gravity="center_vertical">
            
            <ImageView
		        android:layout_width="@dimen/icon_medium"
		        android:layout_height="@dimen/icon_medium"
		        android:scaleType="fitXY"
		        android:padding="@dimen/icon_medium_padding"
		        android:src="@drawable/ic_back"/>
		
	        <TextView 
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:textColor="@color/app_secondary_color"
		        android:textSize="@dimen/text_large"
		        android:text="@string/calendars"/>
            
        </LinearLayout>
        
	    
        <ImageButton 
	       android:id="@+id/info"
	       android:layout_width="@dimen/image_button_medium"
	       android:layout_height="@dimen/image_button_medium"
	       android:background="@drawable/selector_button"
	       android:src="@drawable/ic_question"
	       android:scaleType="centerInside"
	       android:padding="@dimen/icon_large_padding"/>
       
    </LinearLayout>

	<include layout="@layout/overlaps_btn"
		android:id="@+id/overlaps"
		android:layout_width="match_parent"
		android:layout_height="@dimen/image_button_medium"
		android:layout_below="@+id/header"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/shadow_width_m"
		android:background="@drawable/shadow_bottom"
		android:layout_alignTop="@+id/overlaps"/>


    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text_header_color"
        android:textSize="@dimen/text_xsmall"
        android:text="@string/have_no_calendars_add"
        android:padding="@dimen/margin_normal"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    
    <ListView 
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/app_main_color"
        android:dividerHeight="1dp"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/overlaps">
        
    </ListView>

    <View 
   	    android:layout_width="match_parent"
   	    android:layout_height="@dimen/shadow_width_m"
   	    android:background="@drawable/shadow_bottom"
		android:layout_alignTop="@+id/list"/>
    
    <View 
   	    android:layout_width="match_parent"
   	    android:layout_height="@dimen/shadow_width_m"
   	    android:background="@drawable/shadow_top"
		android:layout_alignBottom="@+id/list"/>
    
     <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_alignParentBottom="true"
	        android:id="@+id/buttons">
	    
	        <Button 
		       android:id="@+id/add"
		       android:layout_width="0dp"
		       android:layout_weight="1"
		       android:layout_height="@dimen/image_button_medium"
		       android:textColor="@color/app_secondary_color"
		       android:textStyle="bold"
		       android:background="@drawable/selector_button"
		       android:text="@string/add"/>
		   
	        
	        <ImageButton 
		       android:id="@+id/update_all"
		       android:layout_width="0dp"
		       android:layout_height="@dimen/image_button_medium"
		       android:layout_weight="1"
		       android:background="@drawable/selector_button"
		       android:src="@drawable/refresh"
		       android:scaleType="centerInside"
		       android:padding="@dimen/icon_large_padding"/>
	        
	        
	        <ImageButton 
		       android:id="@+id/delete_all"
		       android:layout_width="0dp"
		       android:layout_height="@dimen/image_button_medium"
		       android:layout_weight="1"
		       android:background="@drawable/selector_button"
		       android:src="@drawable/delete"
		       android:scaleType="centerInside"
		       android:padding="@dimen/icon_large_padding"/>
	        	        
	    </LinearLayout>
    
</RelativeLayout>
